--- a/part4/front/styles.css
+++ b/part4/front/styles.css
@@ -31,7 +31,7 @@ main {
     padding: 2rem;
 }
 
-.place_card, .review_card {
+.place-card, .review-card {
     margin: 20px;
     padding: 10px;
     border: 1px solid #ddd;
