--- a/part4/front/styles.css
+++ b/part4/front/styles.css
@@ -31,11 +31,26 @@ main {
     padding: 2rem;
 }
 
+#places-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    max-width: 1200px;
+    margin: auto;
+    padding: 20px;
+}
+
 .place-card, .review-card {
     margin: 20px;
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 10px;
+}
+
+.index-place-image {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
 }
 
 #error-text{
